# xlwings-rs

./: Cargo.toml  example.xlsx  sst.xml  test.xlsx  vendor
.cargo/: config.toml
derive/: Cargo.toml
derive/src/: enum_to_bytes.rs  lib.rs  reader.rs  writer.rs
src/: errors.rs  helper.rs  lib.rs  workbook.rs  worksheet.rs
src/stream/: mod.rs  utils.rs  xlsx.rs
src/stream/xlsx/: errors.rs  mod.rs  shared_string_table.rs  sheet.rs  stylesheet.rs
src/stream/xlsx/sheet/: filter.rs  index.rs  mod.rs  pane.rs  pivot.rs  pivot_area.rs  property.rs  selection.rs  view.rs
src/tests/: derive.rs
tests/: macro.rs  workbook01.xlsx  workbook02.xlsx  workbook03.xlsx  workbook04.xlsx  workbook05.xlsx
xlwings-serde/: Cargo.toml
xlwings-serde/src/: content.rs  drawing.rs  lib.rs  relationships.rs  shared.rs  sheet.rs  style.rs  theme.rs  workbook.rs
