[package]
name = "xlwings-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xlwings-serde"
]

[dependencies]
serde = { version = "1.0.215", features = ["serde_derive"] }
thiserror = "2.0.3"
zip = "2.2.0"
xlwings-serde = { path = "xlwings-serde" }
quick-xml = { version = "0.37.1", features = ["serde", "serialize"] }
yaserde = { version = "0.12.0", features = ["derive"] }
rust_xlsxwriter = "0.80.0"
