[package]
name = "xlwings-serde"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
quick-xml = { version = "0.37.1", features = ["serde", "serialize"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
yaserde = { version = "0.12.0", features = ["yaserde_derive", "derive"] }
